<resources>
    <string name="app_name">Bazaar</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>

    <string name="_10_digit_mobile_number">10 digit mobile number</string>
    <string name="customer">Customer</string>
    <string name="radiobutton">RadioButton</string>
    <string name="seller">seller</string>
    <string name="are_you_a_customer_or_seller">Are You a customer or seller?</string>

    <string name="next">Next</string>
    <string name="title_activity_custom_home">CustomHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="login_here">Login Here</string>
    <string name="already_registered">Already Registered?</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="seller1">Seller</string>
    <string name="title_activity_register1">Register</string>
    <string name="tab_text_1">Customer</string>
    <string name="tab_text_2">Seller</string>
    <string name="title_activity_seller_home1">SellerHomeActivity1</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_seller_home">SellerHomeActivity</string>
    <string name="menu_logout">menu_logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Rs">\u20B9</string>
</resources>